force-app/main/default/objects/JBCXM__GSCockpitView__c/JBCXM__GSCockpitView__c.object-meta.xml
<CustomObject>
    <description>This object stores cockpit view data per user.</description>
    <label>GSCockpitView</label>
    <nameField>
        <label>GS Cockpit View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSCockpitViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>