force-app/main/default/objects/JBCXM__GSCockpitView__c/fields/JBCXM__AreaName__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AreaName__c</fullName>
    <label>AreaName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>