force-app/main/default/objects/JBCXM__GSCockpitView__c/fields/JBCXM__ColumnList__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ColumnList__c</fullName>
    <description>List of fields for list view.</description>
    <label>Column List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>