force-app/main/default/objects/JBCXM__GSCockpitView__c/fields/JBCXM__Order__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Order__c</fullName>
    <description>Order and group related info.</description>
    <label>Order</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>