force-app/main/default/objects/JBCXM__GSCockpitView__c/fields/JBCXM__WhereClause__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__WhereClause__c</fullName>
    <description>Where clause or Filter conditions to filter CTA.</description>
    <label>Where clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>